DDPB-304 rows not allowed to page-break. fixed the overlapping header/content issue.

--- a/src/AppBundle/Resources/assets/scss/digideps/formatted_report/_main.scss
+++ b/src/AppBundle/Resources/assets/scss/digideps/formatted_report/_main.scss
@@ -1,5 +1,17 @@
 .formatted-report {
 
+    // =======================================================
+    // PAGE BREAKS
+
+    // Tables
+
+    tr {
+        page-break-inside: avoid;
+    }
+
+    // =======================================================
+    // BASE ELEMENTS
+
     @extend %contain-floats;
     @include core-14();
     box-sizing: border-box;
